# textkit

./: .gitignore  Cargo.toml  LICENSE.md  NOTES.md  README.md  document.xml  jupyter_result.xml  jupyter_template.xml  result.docx  test-contents.txt
data/: OLSexample.json  Test-10-Markdown.docx  Test-11-Multiple-Placeholders-One-Paragraph.docx  Test-2.docx  Test-3.docx  Test-4-Table-Rendering.docx  Test-5-Broken-Text-Runs.docx  Test-6-Conditionals.docx  Test-7-Iterators.docx  Test-8-Jupyter.docx  Test-9-Jupyter-And-Broken-Run.docx  Test.docx  data.json  diabetes.txt  diabetes_new.txt  dry-run-example.docx  jupyter-example.docx
data/docx-rev-eng/emphasis/: document.xml
data/docx-rev-eng/font/: document.xml
data/docx-rev-eng/formulas/: document.xml  formula.docx
data/docx-rev-eng/heading/: document.xml  heading.docx
data/docx-rev-eng/images/: document.xml  document.xml.rels  with-image.docx
data/docx-rev-eng/images/blank/docProps/: core.xml
data/docx-rev-eng/images/blank/word/: document.xml  settings.xml
data/docx-rev-eng/images/with-image/docProps/: core.xml
data/docx-rev-eng/images/with-image/word/: document.xml  settings.xml
proto/: Cargo.toml
proto/src/: main.rs
textkit/: Cargo.toml
textkit-core/: Cargo.toml
textkit-core/src/: lib.rs
textkit-core/src/zip/: mod.rs
textkit-docx/: Cargo.toml
textkit-docx/src/: lib.rs
textkit-docx/src/errors/: mod.rs
textkit-docx/src/parse/: accumulator.rs  compressor.rs  mod.rs
textkit-docx/src/render/: datakit_table.rs  jupyter_nb.rs  markdown.rs  mod.rs
textkit-docx/src/template/: mod.rs
textkit-word/: Cargo.toml
textkit-word-wasm-test/: Cargo.toml
textkit-word-wasm-test/src/: lib.rs
textkit-word/src/: lib.rs
textkit/src/: main.rs
