[package]
name = "textkit-word"
version = "0.1.0"
authors = ["Jevgeni Tarasov <jevgeni@hey.com>"]
edition = "2018"

[dependencies]
# Zip to extract XML contents out of .docx files.
# N.B! Not using bzip2 to avoid compilation hassles on WASM targets.
zip = { version = "^0.5", default-features = false, features = ["deflate"] }
xml-rs = "^0.8"
regex = "^1"
lazy_static = "^1"
handlebars = "^3"
serde = "^1"